--- a/todo-list/src/App.css
+++ b/todo-list/src/App.css
@@ -1,10 +1,10 @@
-#root {
+.app-container {
+  background-color: #f0f0f0;
+  width: 218%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 100%;
-  height: 100vh;
-  background-color: #f0f0f0;
-  font-family: Arial, sans-serif;
-
 }
