--- a/todo-list/src/components/InputBox.css
+++ b/todo-list/src/components/InputBox.css
@@ -16,8 +16,5 @@
 }
 .task-box {
   display: flex;
-  margin-bottom: auto;
-  margin-top: 30%;
-  gap: 10px;
-  justify-content: center;
+  margin-bottom: 10px;
 }
