--- a/todo-list/src/App.css
+++ b/todo-list/src/App.css
@@ -1,10 +1,17 @@
 .app-container {
   background-color: #f0f0f0;
-  width: 218%;
-  margin-left: auto;
-  margin-right: auto;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.todo-area {
+  flex: 1;
+  width: 100%;
+  justify-content: start;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
