--- a/todo-list/src/components/InputBox.css
+++ b/todo-list/src/components/InputBox.css
@@ -1,20 +1,29 @@
+.task-box {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+}
+
+
 .input-box {
-  min-width: 400px;
-  height: 35px;
+  width: 600px;
+  height: 38px;
   font-size: 16px;
   border: 1px solid #ccc;
-  cursor: text;
-  border-radius: 5px;
+  border-radius: 6px;
+  padding-left: 10px;
 }
+
 .send-button {
   background-color: rgb(25, 135, 84);
   color: white;
   border: none;
-  border-radius: 5px;
+  padding: 9px 18px;
+  border-radius: 6px;
   font-size: 14px;
   cursor: pointer;
 }
-.task-box {
-  display: flex;
-  margin-bottom: 10px;
+
+.send-button:hover {
+  background-color: rgb(20, 115, 72);
 }
