--- a/todo-list/src/components/Messages.css
+++ b/todo-list/src/components/Messages.css
@@ -1,16 +1,8 @@
 .message-container {
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 15px;
-  
-   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.p1 {
+  margin-bottom: 0px;
+  width: 600px;
+  height: 38px;
   font-weight: bold;
-  margin-bottom: 5px;
+  background-color: rgb(240, 242, 244);
 }
